--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-
+  <app-search-restaurant></app-search-restaurant>
   <app-search-food ></app-search-food>
 </div>
 
