--- a/src/app/search-restaurant/search-restaurant.component.html
+++ b/src/app/search-restaurant/search-restaurant.component.html
@@ -1,3 +1,11 @@
-<p>
-  search-restaurant works!
-</p>
+<form class="search-restaurant-form">
+  <mat-form-field class="search-restaurant-full-width">
+    <input matInput placeholder="吃什麼？" aria-label="State" (input)="keyinput($event)" [matAutocomplete]="auto" [formControl]="stateCtrl">
+    <mat-autocomplete #auto="matAutocomplete">
+      <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
+        <span>{{state.name}}</span>
+      </mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
+</form>
+<mat-checkbox [(ngModel)]="checked">模糊搜尋</mat-checkbox>
