--- a/src/app/search-food/search-food.component.html
+++ b/src/app/search-food/search-food.component.html
@@ -1,6 +1,6 @@
 <form class="search-food-form">
   <mat-form-field class="search-food-full-width">
-    <input matInput placeholder="吃什麼？" aria-label="State" (input)="keyinput($event)" [matAutocomplete]="auto" [formControl]="stateCtrl">
+    <input matInput placeholder="找食物" aria-label="State" (input)="keyinput($event)" [matAutocomplete]="auto" [formControl]="stateCtrl">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
         <span>{{state.name}}</span>
