--- a/src/app/search-restaurant/search-restaurant.component.html
+++ b/src/app/search-restaurant/search-restaurant.component.html
@@ -1,6 +1,6 @@
 <form class="search-restaurant-form">
   <mat-form-field class="search-restaurant-full-width">
-    <input matInput placeholder="吃什麼？" aria-label="State" (input)="keyinput($event)" [matAutocomplete]="auto" [formControl]="stateCtrl">
+    <input matInput placeholder="找餐廳" aria-label="State" (input)="keyinput($event)" [matAutocomplete]="auto" [formControl]="stateCtrl">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
         <span>{{state.name}}</span>
