change to route mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <app-search-restaurant></app-search-restaurant>
-  <app-search-food ></app-search-food>
+  <app-page-menu></app-page-menu>
+  <router-outlet></router-outlet>
 </div>
 
 
