--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <app-page-menu></app-page-menu>
-  <router-outlet></router-outlet>
+<div class="box">
+  <div class="full">
+    <app-page-menu></app-page-menu>
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
 
