--- a/src/app/search-restaurant/search-restaurant.component.html
+++ b/src/app/search-restaurant/search-restaurant.component.html
@@ -1,6 +1,7 @@
-<form class="search-restaurant-form">
+<div class="search-restaurant-form">
+<form>
   <mat-form-field class="search-restaurant-full-width">
-    <input matInput placeholder="找餐廳" aria-label="State" (input)="keyinput($event)" [matAutocomplete]="auto" [formControl]="stateCtrl">
+    <input matInput placeholder="找餐廳" aria-label="State" [(ngModel)]="restaurant" (input)="keyinput($event)" [matAutocomplete]="auto" [formControl]="stateCtrl">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
         <span>{{state.name}}</span>
@@ -9,3 +10,5 @@
   </mat-form-field>
 </form>
 <mat-checkbox [(ngModel)]="checked">模糊搜尋</mat-checkbox>
+</div>
+<button class="go-search" mat-button (click)="OnClick()">開始搜尋</button>
