--- a/src/app/search-food/search-food.component.html
+++ b/src/app/search-food/search-food.component.html
@@ -11,3 +11,5 @@
 </form>
 <mat-checkbox [(ngModel)]="checked">模糊搜尋</mat-checkbox>
 </div>
+<button class="go-search" mat-button (click)="OnClick()">開始搜尋</button>
+<app-food-list></app-food-list>
