--- a/src/app/search-restaurant/search-restaurant.component.html
+++ b/src/app/search-restaurant/search-restaurant.component.html
@@ -12,3 +12,4 @@
 <mat-checkbox [(ngModel)]="checked">模糊搜尋</mat-checkbox>
 </div>
 <button class="go-search" mat-button (click)="OnClick()">開始搜尋</button>
+<app-restaurant-list></app-restaurant-list>
