add d3.js test component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,6 @@
   <div class="full">
     <app-page-menu></app-page-menu>
     <router-outlet></router-outlet>
+    <app-test></app-test>
   </div>
 </div>
-
-
